[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aragora"
version = "2.2.0"
description = "Control plane for multi-agent vetted decisionmaking across org knowledge and channels"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "Agora Contributors"}
]
keywords = [
    "ai",
    "multi-agent",
    "control-plane",
    "deliberation",
    "llm",
    "claude",
    "gpt",
    "consensus",
    "enterprise",
    "decision-assurance",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "aiohttp>=3.13.3,<4.0",  # CVE fixes in 3.13.3
    "websockets>=12.0,<16.1",  # google-genai requires <15.1
    "pyyaml>=6.0,<7.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "bcrypt>=4.0,<6.0",  # Secure password hashing (5.0 adds Argon2 support)
    "cryptography>=43.0,<47.0",  # AES-256-GCM encryption for secrets at rest
    "markupsafe>=2.1.0,<3.0",  # HTML escaping for XSS prevention
    "defusedxml>=0.7,<1.0",  # Safe XML parsing to prevent XXE attacks
    "pyotp>=2.9,<3.0",  # TOTP/HOTP for MFA
    "jinja2>=3.1.6,<4.0",  # CVE-2024-56326 fix
    "urllib3>=2.6.3,<3.0",  # CVE fix
    "httpx>=0.27,<1.0",  # Required by training/tinker_client.py
    "numpy>=2.0,<3.0",  # Required by debate/cache/embeddings_lru.py
    "watchfiles>=0.21,<2.0",  # Required by sync/watcher.py for directory watching
    "boto3>=1.34,<2.0",  # AWS Secrets Manager for production secrets
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-asyncio>=0.21,<2.0",
    "pytest-benchmark>=4.0,<5.0",
    "pytest-cov>=4.0,<8.0",
    "pytest-timeout>=2.0,<3.0",
    "pytest-xdist>=3.5,<4.0",  # Parallel test execution
    "black>=23.0,<27.0",
    "ruff>=0.1,<1.0",
    "bandit>=1.7,<2.0",
    "mypy>=1.8,<2.0",
    "mutmut>=3.0,<4.0",
    "pre-commit>=3.6,<4.0",  # Git hooks for code quality
]
# Test dependencies - install with: pip install -e ".[test]"
# This includes all optional dependencies needed for full test coverage
test = [
    "aragora[dev]",  # Include dev dependencies
    # Database and persistence
    "aiosqlite>=0.19,<1.0",  # Async SQLite for persistence tests
    "supabase>=2.0,<3.0",  # Supabase client tests
    "redis>=5.0.0,<8.0",  # Redis store tests
    "asyncpg>=0.29.0,<1.0",  # Async PostgreSQL for persistence tests
    # Auth and security
    "PyJWT>=2.8,<3.0",  # JWT verification tests
    # Transcription and media
    "yt-dlp>=2024.1,<2027.0",  # YouTube transcription tests
    "tiktoken>=0.5,<1.0",  # Token counter tests
    "openai>=1.0,<2.0",  # Whisper backend tests
    # Integrations
    "twilio>=8.0,<10.0",  # Twilio voice tests
    "mcp>=1.0,<2.0",  # MCP server tests
    "langchain>=0.1,<1.0",  # LangChain integration tests
    # Document processing
    "weaviate-client>=4.0,<5.0",  # Weaviate indexing tests
    # Formal verification
    "z3-solver>=4.12,<5.0",  # Z3 theorem prover for formal verification tests
]
monitoring = [
    "prometheus-client>=0.19,<1.0",
    "sentry-sdk>=2.0,<3.0",
]
observability = [
    "opentelemetry-api>=1.20.0,<2.0",
    "opentelemetry-sdk>=1.20.0,<2.0",
    "opentelemetry-exporter-otlp>=1.20.0,<2.0",
    "opentelemetry-instrumentation-logging>=0.41b0,<1.0",
    "prometheus-client>=0.19,<1.0",
]
redis = [
    "redis>=5.0.0,<8.0",
]
persistence = [
    "supabase>=2.0,<3.0",
    "sqlalchemy>=2.0.40,<3.0",
]
postgres = [
    "asyncpg>=0.29.0,<1.0",
    "alembic>=1.13.0,<2.0",  # Database migrations
]
documents = [
    "pypdf>=6.6,<7.0",  # CVE fixes require 6.6+
    "pdfplumber>=0.10,<1.0",  # Better PDF table extraction
    "python-docx>=0.8,<2.0",  # Word document parsing
    "openpyxl>=3.1,<4.0",  # Excel spreadsheet parsing
    "python-pptx>=0.6,<1.0",  # PowerPoint presentation parsing
    "ebooklib>=0.18,<1.0",  # EPUB e-book parsing
    "beautifulsoup4>=4.12,<5.0",  # HTML parsing for EPUB
    "mobi>=0.3,<1.0",  # Kindle MOBI parsing
    "weasyprint>=60.0,<63.0",  # HTML to PDF conversion for receipts
]
broadcast = [
    "edge-tts>=6.1.0,<7.0",
    "pydub>=0.25.0,<1.0",
    "pyttsx3>=2.90,<3.0;platform_system=='Darwin' or platform_system=='Windows'",
]
broadcast-elevenlabs = [
    "aragora[broadcast]",
    "elevenlabs>=1.0,<3.0",
]
broadcast-polly = [
    "aragora[broadcast]",
    "boto3>=1.34,<2.0",
]
broadcast-xtts = [
    "aragora[broadcast]",
    "TTS>=0.22,<1.0",  # Coqui TTS for XTTS v2 (requires torch)
]
broadcast-premium = [
    "aragora[broadcast-elevenlabs,broadcast-polly,broadcast-xtts]",
]
research = [
    "duckduckgo-search>=6.0,<8.0",
    "beautifulsoup4>=4.12,<5.0",
]
gauntlet = [
    # Minimal dependencies for standalone Gauntlet CLI
    # Core package includes all required dependencies
]
ml = [
    "scipy>=1.14.0,<2.0",  # 1.14.0+ required for NumPy 2.x support
    "scikit-learn>=1.5.0,<2.0",  # 1.5.0+ required for NumPy 2.x support
    "sentence-transformers>=3.0.0,<4.0",
]
rlm = [
    # Official RLM library from arXiv:2512.24601 (MIT license)
    # Enables recursive language models for infinite context processing
    # Source: https://github.com/alexzhang13/rlm
    # NOTE: Currently conflicts with our pytest<9.0 and openai<2.0 constraints.
    # The aragora.rlm module works without this package (graceful fallback).
    # To use official RLM: pip install git+https://github.com/alexzhang13/rlm.git@v1.0.0
    # "rlm @ git+https://github.com/alexzhang13/rlm.git@v1.0.0",
]
control-plane = [
    "redis>=5.0.0,<6.0",
    "networkx>=3.0,<4.0",  # DAG workflow representation
]
code-intel = [
    # Tree-sitter for AST parsing
    "tree-sitter>=0.23.0,<1.0",
    "tree-sitter-python>=0.23.0,<1.0",
    "tree-sitter-javascript>=0.23.0,<1.0",
    "tree-sitter-typescript>=0.23.0,<1.0",
    "tree-sitter-go>=0.23.0,<1.0",
    "tree-sitter-rust>=0.23.0,<1.0",
    "tree-sitter-java>=0.23.0,<1.0",
    # Call graph and analysis
    "networkx>=3.0,<4.0",
]
all = [
    # Note: 'rlm' excluded due to dependency conflicts (requires pytest>=9, openai>=2)
    "aragora[test,persistence,documents,broadcast-premium,research,monitoring,ml,redis,control-plane,postgres,observability,code-intel]",
]

[project.scripts]
aragora = "aragora.cli.main:main"
gauntlet = "aragora.gauntlet.__main__:main"

[project.urls]
Homepage = "https://aragora.ai"
Documentation = "https://github.com/an0mium/aragora#readme"
Repository = "https://github.com/an0mium/aragora"
Issues = "https://github.com/an0mium/aragora/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aragora*"]

[tool.setuptools.package-data]
"aragora" = ["py.typed"]
"aragora.fixtures" = ["*.json"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "T201", "BLE001"]  # T201 = print, BLE001 = blind except
ignore = ["E402", "E501"]

[tool.ruff.lint.per-file-ignores]
# Allow print statements in CLI modules, migrations, and scripts
"aragora/cli/*" = ["T201", "BLE001"]
"aragora/migrations/*" = ["T201", "BLE001"]
"aragora/db/migrate.py" = ["T201", "BLE001"]
"aragora/persistence/migrations/*" = ["T201", "BLE001"]
"aragora/training/exporters/*" = ["T201", "BLE001"]
"aragora/training/tinker_client.py" = ["T201", "BLE001"]
"aragora/debate/breakpoints.py" = ["T201", "BLE001"]
"aragora/nomic/gates.py" = ["T201", "BLE001"]
"scripts/*" = ["T201", "F401", "F841", "BLE001"]
"tests/*" = ["T201", "F401", "F841", "BLE001"]
"examples/*" = ["T201", "BLE001"]
# BLE001: Ignore bare exception handlers in all modules (to be fixed incrementally)
# 3,606 existing violations documented - fix in phases
"aragora/*" = ["BLE001"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
timeout = 60
timeout_method = "thread"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    # Ignore pytest collection warnings for non-test classes in pipeline/test_plan.py
    "ignore:cannot collect test class.*:pytest.PytestCollectionWarning",
    # Ignore unawaited coroutine warnings from AsyncMock cleanup during tests
    "ignore:coroutine .* was never awaited:RuntimeWarning",
]
markers = [
    "unit: marks tests as fast unit tests (run with '-m unit')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "load: marks tests as load/stress tests (deselect with '-m \"not load\"')",
    "integration: marks tests as integration tests",
    "integration_minimal: marks integration tests safe to run without external services",
    "e2e: marks tests as end-to-end tests (require running server)",
    "serial: marks tests that must run serially (use with 'pytest -p no:xdist' or '-n0')",
    "knowledge: marks tests for knowledge mound features",
    "new_features: marks tests for new feature E2E testing",
    "experimental: marks tests for experimental/unstable features",
    "external: marks tests requiring external services (APIs, databases)",
    "flaky: marks tests with known intermittent failures",
    "requires_server: marks tests that need a running Aragora server",
]
# Parallel test execution: pip install pytest-xdist && pytest -n auto
# To run serial-only tests: pytest -m serial -n0

[tool.mypy]
python_version = "3.11"
mypy_path = "typings"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "build/",
    "dist/",
    ".venv/",
    "node_modules/",
]
# Start non-strict globally, enable per-module
check_untyped_defs = false
disallow_untyped_defs = false

# Strict settings for core modules (enable incrementally)
[[tool.mypy.overrides]]
module = [
    "aragora.core",
    "aragora.config.*",
    "aragora.types.*",
    "aragora.persistence.db_config",
    "aragora.persistence.models",
    "aragora.server.validation.*",
    "aragora.protocols",
    "aragora.ranking.elo_core",
    "aragora.debate.autonomic_executor",
    "aragora.debate.sanitization",
    "aragora.resilience",
    # Added strict - clean modules (Jan 2026)
    "aragora.debate.termination_checker",
    "aragora.debate.team_selector",
    "aragora.debate.convergence.*",
    "aragora.exceptions",
    "aragora.auth.lockout",
    # Added strict - Phase 3 modules (Jan 2026)
    "aragora.agents.calibration",
    "aragora.reasoning.belief",
    "aragora.storage.base_store",
    "aragora.debate.memory_manager",
    # Added strict - Phase 5 storage layer (Jan 2026)
    "aragora.storage.factory",
    "aragora.storage.webhook_store",
    # Added strict - Phase 6 agent modules (Jan 2026)
    "aragora.agents.api_agents.anthropic",
    "aragora.agents.api_agents.openai",
    "aragora.agents.api_agents.mistral",
    "aragora.agents.api_agents.base",
    "aragora.agents.streaming",
    # Added strict - Phase 7 type safety expansion (Jan 2026)
    "aragora.memory.database",
    "aragora.server.stream.events",
    "aragora.debate.phases.vote_weighter",
    "aragora.debate.phases.weight_calculator",
    "aragora.debate.phases.vote_collector",
    "aragora.debate.phases.vote_aggregator",
    "aragora.debate.phases.consensus_verification",
    "aragora.debate.phases.roles_manager",
    # Added strict - Debate phases expansion (Jan 2026)
    "aragora.debate.phases.metrics",
    "aragora.debate.phases.spectator",
    "aragora.debate.phases.critique",
    "aragora.debate.phases.winner_selector",
    "aragora.debate.phases.training_emitter",
    "aragora.debate.phases.judgment",
    "aragora.debate.phases.synthesis_generator",
    "aragora.debate.context",
    "aragora.debate.protocol",
    "aragora.debate.roles",
    "aragora.agents.base",
    "aragora.agents.registry",
    "aragora.ranking.elo",
    "aragora.ranking.relationships",
    "aragora.templates",
    "aragora.debate.prompt_builder",
    "aragora.memory.__init__",
    # Added strict - Phase 8 plugin modules (Jan 2026)
    "aragora.plugins.builtin.lint",
    "aragora.plugins.builtin.security",
    "aragora.plugins.builtin.tests",
    # Added strict - Phase 18 plugin system completion (Jan 2026)
    "aragora.plugins.__init__",
    "aragora.plugins.manifest",
    "aragora.plugins.runner",
    "aragora.plugins.builtin.__init__",
    "aragora.plugins.selection.__init__",
    "aragora.plugins.selection.protocols",
    "aragora.plugins.selection.registry",
    "aragora.plugins.selection.strategies",
    # Added strict - Phase 9 server handlers (Jan 2026)
    "aragora.server.handlers.reviews",
    "aragora.server.handlers.docs",
    "aragora.server.handlers.exceptions",
    "aragora.server.handlers.routing",
    # Added strict - Phase 10 utils modules (Jan 2026)
    "aragora.utils.sql_helpers",
    "aragora.utils.error_sanitizer",
    "aragora.utils.async_utils",
    "aragora.utils.timeouts",
    "aragora.utils.paths",
    "aragora.utils.optional_imports",
    "aragora.utils.cache_registry",
    "aragora.utils.token_helpers",
    # Added strict - Phase 11 handlers expansion (Jan 2026)
    "aragora.server.handlers.laboratory",
    "aragora.server.handlers.critique",
    "aragora.server.handlers.introspection",
    "aragora.server.handlers.breakpoints",
    "aragora.server.handlers.moments",
    "aragora.server.handlers.gallery",
    "aragora.server.handlers.persona",
    "aragora.server.handlers.nomic",
    "aragora.server.handlers.selection",
    # Added strict - Phase 14 handler reorganization (Jan 2026)
    # Core handler infrastructure
    "aragora.server.handlers.base",
    "aragora.server.handlers.types",
    # Admin handlers (admin/ subdirectory)
    "aragora.server.handlers.admin.health",
    "aragora.server.handlers.admin.admin",
    "aragora.server.handlers.admin.billing",
    "aragora.server.handlers.admin.dashboard",
    "aragora.server.handlers.admin.system",
    # Agent handlers (agents/ subdirectory)
    "aragora.server.handlers.agents.agents",
    "aragora.server.handlers.agents.calibration",
    "aragora.server.handlers.agents.leaderboard",
    "aragora.server.handlers.agents.probes",
    # Auth handlers (auth/ subdirectory)
    "aragora.server.handlers.auth.handler",
    "aragora.server.handlers.auth.store",
    "aragora.server.handlers.auth.validation",
    # Debate handlers (debates/ subdirectory)
    "aragora.server.handlers.debates.handler",
    "aragora.server.handlers.debates.batch",
    "aragora.server.handlers.debates.fork",
    "aragora.server.handlers.debates.graph_debates",
    "aragora.server.handlers.debates.matrix_debates",
    # Evolution handlers (evolution/ subdirectory)
    "aragora.server.handlers.evolution.handler",
    "aragora.server.handlers.evolution.ab_testing",
    # Feature handlers (features/ subdirectory)
    "aragora.server.handlers.features.audio",
    "aragora.server.handlers.features.broadcast",
    "aragora.server.handlers.features.documents",
    "aragora.server.handlers.features.evidence",
    "aragora.server.handlers.features.features",
    "aragora.server.handlers.features.plugins",
    "aragora.server.handlers.features.pulse",
    # Memory handlers (memory/ subdirectory)
    "aragora.server.handlers.memory.memory",
    "aragora.server.handlers.memory.memory_analytics",
    "aragora.server.handlers.memory.insights",
    "aragora.server.handlers.memory.learning",
    # Social handlers (social/ subdirectory)
    "aragora.server.handlers.social.collaboration",
    "aragora.server.handlers.social.notifications",
    "aragora.server.handlers.social.relationship",
    "aragora.server.handlers.social.sharing",
    "aragora.server.handlers.social.slack",
    "aragora.server.handlers.social.social_media",
    # Verification handlers (verification/ subdirectory)
    "aragora.server.handlers.verification.verification",
    "aragora.server.handlers.verification.formal_verification",
    # Utils handlers (utils/ subdirectory)
    "aragora.server.handlers.utils.decorators",
    "aragora.server.handlers.utils.params",
    "aragora.server.handlers.utils.rate_limit",
    "aragora.server.handlers.utils.responses",
    "aragora.server.handlers.utils.routing",
    "aragora.server.handlers.utils.safe_data",
    # Root-level handlers
    "aragora.server.handlers.analytics",
    "aragora.server.handlers.audit_export",
    "aragora.server.handlers.auditing",
    "aragora.server.handlers.belief",
    "aragora.server.handlers.checkpoints",
    "aragora.server.handlers.consensus",
    "aragora.server.handlers.gauntlet",
    "aragora.server.handlers.genesis",
    "aragora.server.handlers.metrics",
    "aragora.server.handlers.oauth",
    "aragora.server.handlers.organizations",
    "aragora.server.handlers.replays",
    "aragora.server.handlers.sso",
    "aragora.server.handlers.tournaments",
    "aragora.server.handlers.training",
    "aragora.server.handlers.webhooks",
    # Added strict - Phase 11 broadcast modules (Jan 2026)
    "aragora.broadcast.script_gen",
    "aragora.broadcast.mixer",
    # Added strict - Phase 11 memory modules (Jan 2026)
    "aragora.memory.embeddings",
    "aragora.memory.streams",
    # Added strict - Phase 11 server stream (Jan 2026)
    "aragora.server.stream.state_manager",
    "aragora.server.stream.emitter",
    "aragora.server.stream.arena_hooks",
    # Added strict - Phase 11 insights modules (Jan 2026)
    "aragora.insights.__init__",
    "aragora.insights.database",
    # Added strict - Phase 11 additional modules (Jan 2026)
    "aragora.reasoning.__init__",
    "aragora.maintenance.__init__",
    "aragora.billing.usage",
    "aragora.billing.models",
    "aragora.server.oauth_state_store",
    # Added strict - Phase 2 Nomic governance modules (Jan 2026)
    "aragora.nomic.gates",
    "aragora.nomic.audit",
    "aragora.nomic.state_machine",
    "aragora.nomic.events",
    "aragora.nomic.states",
    # Added strict - Phase 15 refactored modules (Jan 2026)
    "aragora.debate.lifecycle_manager",
    "aragora.debate.event_emission",
    "aragora.debate.checkpoint_ops",
    "aragora.debate.grounded_operations",
    "aragora.debate.prompt_context",
    "aragora.debate.context_delegation",
    "aragora.memory.continuum_stats",
    "aragora.memory.continuum_consolidation",
    "aragora.server.response_utils",
    "aragora.server.startup",
    "aragora.ranking.match_recorder",
    "aragora.ranking.verification",
    "aragora.ranking.snapshot",
    "aragora.client.errors",
    "aragora.client.transport",
    # Added strict - Phase 16 type safety expansion (Jan 2026)
    "aragora.debate.judge_selector",
    "aragora.server.handlers.sso",
    "aragora.server.handlers.oauth",
    "aragora.cli.gauntlet",
    "aragora.storage.token_blacklist_store",
    # Added strict - Phase 16 refactored modules (Jan 2026)
    "aragora.routing.domain_matcher",
    "aragora.routing.team_builder",
    "aragora.server.handlers.debates.export",
    "aragora.server.handlers.debates.analysis",
    "aragora.server.handlers.debates.search",
    # Added strict - Phase 17 mypy expansion (Jan 2026)
    "aragora.memory.continuum",
    "aragora.debate.phases.critique",
    "aragora.queue.status",
    "aragora.agents.api_agents.common",
    "aragora.debate.convergence",
    # Added strict - Control Plane modules (Jan 2026)
    "aragora.control_plane.*",
    "aragora.server.handlers.control_plane",
    # Added strict - Phase 19 training module (Jan 2026)
    "aragora.training.__init__",
    "aragora.training.debate_exporter",
    "aragora.training.evaluator",
    "aragora.training.model_registry",
    "aragora.training.specialist_models",
    "aragora.training.tinker_client",
    "aragora.training.training_scheduler",
    "aragora.training.exporters.__init__",
    "aragora.training.exporters.base",
    "aragora.training.exporters.dpo_exporter",
    "aragora.training.exporters.gauntlet_exporter",
    "aragora.training.exporters.sft_exporter",
    # Added strict - Phase 20 enterprise connectors (Jan 2026)
    "aragora.connectors.enterprise.*",
    # Added strict - Phase 21 auth and lifecycle modules (Jan 2026)
    "aragora.auth.*",
    "aragora.debate.lifecycle_manager",
    "aragora.debate.event_emission",
    "aragora.debate.debate_hooks",
    "aragora.debate.event_bus",
    # Added strict - RLM modules (Jan 2026)
    "aragora.rlm.__init__",
    "aragora.rlm.types",
    "aragora.rlm.bridge",
    "aragora.rlm.compressor",
    "aragora.rlm.metrics",
    "aragora.rlm.repl",
    "aragora.rlm.strategies",
    "aragora.rlm.streaming",
    "aragora.rlm.training.__init__",
    "aragora.rlm.training.buffer",
    "aragora.rlm.training.policy",
    "aragora.rlm.training.reward",
    "aragora.debate.cognitive_limiter_rlm",
    "aragora.memory.cross_debate_rlm",
    # Added strict - Phase 4 transcription module (Jan 2026)
    "aragora.transcription.*",
    "aragora.server.handlers.transcription",
    # Added strict - Core modules (Jan 2026)
    "aragora.exceptions",
    "aragora.serialization",
    # Added strict - Phase 23 clean modules (Jan 2026)
    "aragora.knowledge.types",
    "aragora.agents.types",
    "aragora.rbac.models",
    "aragora.rbac.defaults",
    # Added strict - Phase 24 extracted modules (Jan 2026)
    "aragora.server.prometheus_nomic",
    "aragora.server.prometheus_control_plane",
    "aragora.server.prometheus_rlm",
    "aragora.debate.phases.feedback_elo",
    "aragora.debate.phases.feedback_persona",
    "aragora.debate.phases.feedback_evolution",
    "aragora.rlm.debate_adapter",
    "aragora.rlm.knowledge_adapter",
    "aragora.rlm.hierarchy_cache",
    "aragora.rlm.types",
    # Added strict - Phase 25 extracted modules (Jan 2026)
    "aragora.reasoning.crux_detector",
    "aragora.observability.metrics.bridge",
    "aragora.observability.metrics.km",
    "aragora.observability.metrics.notification",
    "aragora.rlm.streaming_mixin",
    "aragora.client.resources.gauntlet",
    "aragora.client.resources.graph_debates",
    "aragora.client.resources.matrix_debates",
    "aragora.client.resources.replay",
    # Added strict - Phase 26 additional modules (Jan 2026)
    "aragora.client.resources.agents",
    "aragora.client.resources.memory",
    "aragora.client.resources.verification",
    "aragora.modes.tool_groups",
    "aragora.modes.builtin.architect",
    "aragora.modes.builtin.coder",
    "aragora.modes.builtin.debugger",
    "aragora.modes.builtin.reviewer",
    "aragora.ranking.verification",
    "aragora.billing.jwt_auth",
    "aragora.spectate.events",
    "aragora.mcp.tools_module.gauntlet",
    # Added strict - Phase 27 continuum extractions (Jan 2026)
    "aragora.memory.continuum_glacial",
    "aragora.memory.continuum_snapshot",
    # Added strict - Phase 27 workflow templates (Jan 2026)
    "aragora.workflow.templates.__init__",
    "aragora.workflow.templates.package",
    "aragora.workflow.templates.patterns",
    "aragora.workflow.templates.legal",
    "aragora.workflow.templates.healthcare",
    "aragora.workflow.templates.accounting",
    "aragora.workflow.templates.ai_ml",
    "aragora.workflow.templates.code",
    "aragora.workflow.templates.devops",
    "aragora.workflow.templates.product",
    # Added strict - Phase 27 misc modules (Jan 2026)
    "aragora.server.stream.events",
    "aragora.client.resources.leaderboard",
    "aragora.debate.safety",
    "aragora.replay.schema",
    "aragora.modes.builtin.orchestrator",
    "aragora.server.handlers.knowledge",
    "aragora.broadcast.mixer",
    # Added strict - Phase 28 RBAC and billing (Jan 2026)
    "aragora.rbac.types",
    "aragora.rbac.models",
    "aragora.rbac.defaults",
    "aragora.billing.jwt_auth",
    # Added strict - Phase 29 workflow engine hardening (Jan 2026)
    "aragora.workflow.types",
    "aragora.workflow.step",
    "aragora.workflow.engine",
    "aragora.workflow.checkpoint_store",
    "aragora.workflow.safe_eval",
    "aragora.workflow.queue.task",
    "aragora.workflow.queue.queue",
    "aragora.workflow.queue.persistent_queue",
    "aragora.workflow.queue.executor",
    "aragora.workflow.queue.scheduler",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

# Moderate settings - fallback for any new handler modules
# Note: Most handlers promoted to strict in Phase 14 (Jan 2026)
# This acts as a fallback for __init__.py files and new handlers
[[tool.mypy.overrides]]
module = [
    "aragora.server.handlers.__init__",
    "aragora.server.handlers.admin.__init__",
    "aragora.server.handlers.agents.__init__",
    "aragora.server.handlers.auth.__init__",
    "aragora.server.handlers.debates.__init__",
    "aragora.server.handlers.evolution.__init__",
    "aragora.server.handlers.features.__init__",
    "aragora.server.handlers.memory.__init__",
    "aragora.server.handlers.social.__init__",
    "aragora.server.handlers.verification.__init__",
    "aragora.server.handlers.utils.__init__",
]
check_untyped_defs = true

# Moderate-strict for complex modules (check untyped defs)
# Note: aragora.memory.continuum promoted to strict in Phase 17
[[tool.mypy.overrides]]
module = [
    "aragora.debate.orchestrator",
    "aragora.agents.api_agents.*",
    "aragora.memory.consensus",
    # aragora.memory.streams promoted to strict in Phase 11
    # Phase 4: bots module - moderate until decorator types fixed
    "aragora.bots.*",
    "aragora.server.handlers.bots.*",
]
disallow_untyped_defs = false
check_untyped_defs = true

# Allow untyped for deprecated modules
[[tool.mypy.overrides]]
module = [
    "aragora.agents.cli_agents",
]
disallow_untyped_defs = false
check_untyped_defs = false

# Ignore missing stubs for third-party libraries
[[tool.mypy.overrides]]
module = ["yaml", "croniter"]
ignore_missing_imports = true

# Ignore errors in modules with complex third-party types or dynamic patterns
# Phase 22: Reduced from 100+ to ~25 modules (Jan 2026)
# Many modules promoted to strict after verification
[[tool.mypy.overrides]]
module = [
    # Third-party integrations (external SDK types)
    "aragora.persistence.supabase_client",
    "aragora.persistence.migrations.*",
    "aragora.observability.slo",
    "aragora.billing.stripe_client",
    "aragora.billing.auth.blacklist",
    # Nomic phases (complex orchestration)
    "aragora.nomic.phases.*",
    "aragora.nomic.checkpoints",
    # Verification (Z3/Lean external types)
    "aragora.verification.proofs",
    "aragora.verification.formal",
    # Dynamic modules with complex patterns
    "aragora.gauntlet.heatmap",
    "aragora.gauntlet.receipt",
    "aragora.export.audit_trail",
    "aragora.export.artifact",
    "aragora.runtime.autotune",
    "aragora.modes.redteam",
    "aragora.training.model_registry",
    "aragora.pipeline.pr_generator",
    "aragora.policy.engine",
    # Storage layer (database return types)
    "aragora.storage.audit_store",
    "aragora.storage.organization_store",
    "aragora.storage.postgres_store",
    "aragora.storage.repositories.*",
    # Server/handler modules with complex db interactions
    "aragora.server.openapi",
    "aragora.server.validation.decorators",
    "aragora.server.middleware.*",
    "aragora.server.handlers.admin.cache",
    "aragora.server.handlers.utils.database",
    "aragora.agents.api_agents.rate_limiter",
    # Documents/indexing (external adapters)
    "aragora.documents.ingestion.unstructured_adapter",
    "aragora.documents.indexing.weaviate_store",
    # Modules with actual type errors (need fixes)
    "aragora.evidence.collector",
    "aragora.server.question_classifier",
    # MCP tools (dynamic typing)
    "aragora.mcp.tools_module.evidence",
]
ignore_errors = true

# ============================================================================
# PROMOTED TO STRICT (Phase 22, Jan 2026)
# These modules now pass mypy --ignore-missing-imports
# ============================================================================
# aragora.server.state
# aragora.server.debate_utils
# aragora.server.static_server
# aragora.server.storage
# aragora.server.research_phase
# aragora.server.debate_queue
# aragora.db.backends
# aragora.db.migrate
# aragora.utils.optional_imports
# aragora.utils.cache
# aragora.services.registry
# aragora.debate.tracing
# aragora.debate.phases.metrics
# aragora.debate.phases.spectator
# aragora.debate.graph
# aragora.debate.agent_pool
# aragora.debate.event_bridge
# aragora.debate.role_matcher
# aragora.debate.context_gatherer
# aragora.debate.similarity.backends
# aragora.debate.traces_database
# aragora.agents.telemetry
# aragora.cli.replay
# aragora.memory.tier_manager
# aragora.memory.consensus
# aragora.queue.status
# aragora.connectors.github
# aragora.connectors.base
# aragora.connectors.youtube_uploader
# aragora.connectors.twitter_poster
# aragora.connectors.wikipedia
# aragora.connectors.sec
# aragora.connectors.newsapi
# aragora.connectors.web
# aragora.broadcast.storage
# aragora.broadcast.tts_backends
# aragora.storage.schema
# aragora.storage.user_store
# aragora.storage.token_blacklist_store
# aragora.storage.base_database
# aragora.nomic.recovery
# aragora.nomic.preflight
# aragora.logging_config
# aragora.client.websocket
# aragora.observability.immutable_log
# aragora.auth.lockout
# aragora.auth.saml
# aragora.auth.oidc
# aragora.gauntlet.storage
# aragora.ranking.calibration_database
# aragora.billing.payment_recovery
# aragora.knowledge.fact_store
# aragora.knowledge.fact_extractor
# aragora.insights.store
# aragora.training.tinker_client
# aragora.pulse.ingestor
# aragora.pulse.scheduler
# aragora.genesis.ledger
# aragora.genesis.breeding
# aragora.audit.evidence_adapter
# aragora.modes.probes.strategies
# aragora.privacy.classifier
# aragora.privacy.audit_log
# aragora.privacy.isolation
# aragora.security.encryption
# aragora.fixtures
# ============================================================================

# Ignore errors in scripts (not part of main package)
[[tool.mypy.overrides]]
module = [
    "scripts.*",
]
ignore_errors = true

[tool.mutmut]
# Note: mutmut v3.4.0 has a bug parsing paths_to_mutate from pyproject.toml
# For now, use: mutmut run aragora/ranking/elo_core.py (positional arg)
# Or downgrade to mutmut v2.x which uses different config format
paths_to_mutate = "aragora/"
tests_dir = "tests/"
runner = "python -m pytest -x --tb=no -q"
dict_synonyms = "Struct,NamedTuple,Dict"
backup = false

# Coverage configuration
[tool.coverage.run]
branch = true
source = ["aragora"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "aragora/live/*",  # Frontend code
    "*/migrations/*",
]

[tool.coverage.report]
# Coverage threshold - incrementally raised
# 19% (initial) -> 30% (Sprint 2.1) -> 45% (Sprint 9, Jan 2026)
# Enterprise modules (control_plane, tenancy, policy, privacy) at 55%
# Target: 50% by end of Q1 2026, 70% by end of Q2 2026
fail_under = 45
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
    "\\.\\.\\.",  # Ellipsis
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.bandit]
# Security linting configuration
exclude_dirs = ["tests", "node_modules", ".venv", "venv", "build", "dist"]
skips = [
    "B101",  # assert_used - OK in tests
    "B104",  # hardcoded_bind_all_interfaces - OK for dev server
    "B311",  # random - OK for non-crypto uses
]
# Target confidence level
confidence = "HIGH"
