[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aragora-debate"
version = "0.1.0"
description = "Adversarial multi-model debate engine with decision receipts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Aragora", email = "team@aragora.dev" },
]
keywords = [
    "adversarial-debate",
    "multi-agent",
    "decision-integrity",
    "llm",
    "consensus",
    "audit-trail",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.20.0"]
openai = ["openai>=1.0.0"]
all = ["anthropic>=0.20.0", "openai>=1.0.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/aragora/aragora-debate"
Documentation = "https://aragora.dev/docs"
Repository = "https://github.com/aragora/aragora-debate"

[tool.hatch.build.targets.wheel]
packages = ["src/aragora_debate"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
