[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aragora-debate"
version = "0.2.0"
description = "Adversarial multi-model debate engine -- pit LLMs against each other, detect hollow consensus, and produce cryptographic decision receipts. Zero required dependencies."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Aragora", email = "team@aragora.dev" },
]
keywords = [
    "adversarial-debate",
    "multi-agent",
    "decision-integrity",
    "llm",
    "consensus",
    "audit-trail",
    "hollow-consensus",
    "evidence-quality",
    "convergence-detection",
    "decision-receipt",
    "multi-model",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.20.0"]
openai = ["openai>=1.0.0"]
mistral = ["mistralai>=1.0.0"]
gemini = ["google-genai>=1.0.0"]
all = [
    "anthropic>=0.20.0",
    "openai>=1.0.0",
    "mistralai>=1.0.0",
    "google-genai>=1.0.0",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/an0mium/aragora"
Documentation = "https://aragora.dev/docs/debate"
Repository = "https://github.com/an0mium/aragora/tree/main/aragora-debate"
Changelog = "https://github.com/an0mium/aragora/blob/main/aragora-debate/CHANGELOG.md"
"Bug Tracker" = "https://github.com/an0mium/aragora/issues"

[tool.hatch.build.targets.sdist]
exclude = ["CLAUDE.md", "**/CLAUDE.md", ".nomic/", ".benchmarks/"]

[tool.hatch.build.targets.wheel]
packages = ["src/aragora_debate"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
